[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "clickhouse-connect>=0.9.2",
    "fastapi>=0.119.1",
    "frontend>=0.0.3",
    "httpx>=0.28.1",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.3",
    "python-binance>=1.0.30",
    "redis>=6.4.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
    "websockets>=15.0.1",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.17.0",
    "protobuf>=6.33.0",
    "grpcio-tools>=1.75.1",
]
